test/typeof2.l1.out
typeof(x = dom`a) = enum x
get 0 1
typeof(x = x->foo) = int
typeof(dom`a) = enum x
sizeof(dom`a) = 4
sizeof(typeof(dom`a)) = 4
typeof(x->foo) = int
error: attempt to determine size of bitfield
	#0                  sizeof	(builtin function)
	#1                   entry	(typeof2.l1:66)
